--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.6",
     "path": "^0.12.7",
     "puppeteer": "^24.11.2",
     "url": "^0.11.4",
